--- a/style.css
+++ b/style.css
@@ -1,14 +1,79 @@
 body {
   font-family: "Pacifico", cursive;
+  margin: 0;
 }
-.name-hilight {
+.orange-hilight {
   color: orange;
 }
 .half-width {
   width: 40%;
   float: left;
-  margin: 5px;
+  margin-left: 5%;
+  padding-left: 2%;
 }
 .half-width img {
   width: 100%;
+}
+.top-banner {
+  background-image: url("images/top-banner.png");
+  background-repeat: no-repeat;
+}
+section {
+  height: 500px;
+  padding-bottom: 300px;
+}
+p {
+  color: dimgray;
+}
+.link-button {
+  text-decoration: none;
+  background-image: linear-gradient(45deg, lightSalmon, tomato);
+
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: rgb(15, 6, 6);
+  font-weight: 700;
+}
+h1 {
+  font-size: 50px;
+}
+h2 {
+  font-size: 40px;
+}
+
+.dream-area {
+  background-image: url(images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
+}
+.experience-area {
+  background-position: left;
+}
+.single-experiance {
+  box-shadow: 10px 10px 40px gray;
+  border-radius: 10px;
+  height: 80%;
+  background-color: white;
+}
+.experience-area {
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+#full-stack {
+  border-left: 7px solid;
+  border-image: linear-gradient(180deg, lightSalmon, tomato);
+  border-image-slice: 1;
+}
+#baby-web {
+  border-left: 7px solid;
+  border-image: linear-gradient(180deg, blue, cyan);
+  border-image-slice: 1;
+}
+#exp {
+  padding-left: 99px;
+}
+footer {
+  text-align: center;
+  font-size: 12px;
 }
